# polfan-js-client-library

./: .gitignore  .gitmodules  README.md  babel.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.browser.js  webpack.config.js  webpack.config.node.js
lib/: Client.js  ConnectionInterface.js  MessageInterface.d.ts  MessageInterface.js  ObservableInterface.d.ts  ObservableInterface.js  Token.js  WebApiConnection.d.ts  WebApiConnection.js  index.d.ts  index.js
libpy/: .gitignore  README.md  pyproject.toml  test_import.py
libpy/src/devana_client/: __init__.py  api.py  events.py  exceptions.py  ws.py
src/: AbstractChatClient.ts  AbstractClient.ts  AbstractRestClient.ts  AuthClient.ts  ChatStateTracker.ts  Client.ts  ConnectionInterface.ts  EventTarget.ts  FilesClient.ts  IndexedObjectCollection.ts  MessageInterface.ts  ObservableInterface.ts  Permission.ts  Permissions.ts  Token.ts  WebApiChatClient.ts  WebApiClient.ts  WebApiConnection.ts  WebSocketChatClient.ts  WebSocketClient.ts  WebSocketConnection.ts  WebSocketStateTracker.ts  index.ts  protocol.ts
src/connections/: ConnectionAssets.ts  ConnectionInterface.ts  RestApiConnection.ts  WebApiConnection.ts  WebSocketConnection.ts
src/devana_client/: __init__.py  api.py  client.py  exceptions.py  ws.py
src/dtos/: Dto.ts  Message.ts  Permission.ts  Role.ts  Room.ts  RoomMember.ts  RoomSummary.ts  Space.ts  SpaceMember.ts  Topic.ts  (+2 more)
tests/: async-utils.test.ts  collections.test.ts  history-window.test.ts  permissions.test.ts  space-roles.test.ts  test_import.py
(+67 files in other folders)
