[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devana-client"
version = "0.1.0"
description = "Async Python client library for Devana Chat Server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name="Author", email="author@example.com" },
]
dependencies = [
  "aiohttp>=3.8.0",
  "websockets>=11.0.0"
]

[project.urls]
"Homepage" = "https://github.com/your-repo/devana-client"
